--- a/.github/workflows/azure-spring-apps-java-jar.yml
+++ b/.github/workflows/azure-spring-apps-java-jar.yml
@@ -1,5 +1,8 @@
 name: AzureSpringCloud
-on: push
+on: [push, workflow_dispatch]
+permissions:
+  id-token: write
+  contents: read
 env:
   ASC_PACKAGE_PATH: ${{ github.workspace }}
   JAVA_VERSION: 17
