--- a/.github/workflows/azure-spring-apps-java-jar.yml
+++ b/.github/workflows/azure-spring-apps-java-jar.yml
@@ -16,6 +16,4 @@ jobs:
       - name: Login via Azure CLI
         uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
