--- a/.github/workflows/gradle-dockerImg-pushAcr.yml
+++ b/.github/workflows/gradle-dockerImg-pushAcr.yml
@@ -48,5 +48,5 @@ jobs:
       with:
           push: true
           tags: ${{ secrets.ACR_LOGIN_SERVER }}/springrestapi:${{ github.sha }}
-          file: springrestapi/Dockerfile
+          file: Dockerfile
           context: springrestapi
